--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
+	<groupId>a289f059-88d8-41f8-a287-613f5fbd53b7</groupId>
 	<artifactId>cloudhub2.0</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
-
 	<name>cloudhub2.0</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
 		<app.runtime>4.6.1</app.runtime>
 		<mule.maven.plugin.version>4.1.0</mule.maven.plugin.version>
 	</properties>
@@ -29,6 +27,46 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				     <configuration>
+    <cloudhub2Deployment>
+      <uri>https://anypoint.mulesoft.com</uri>
+      <provider>MC</provider>
+      <environment>Sandbox</environment>
+      <target>Cloudhub-US-East-2</target>
+      <muleVersion>${app.runtime}</muleVersion>
+      <username>ajithkumar1999</username>
+      <password>Mymule@19</password>
+      <applicationName>Task1</applicationName>
+      <replicas>1</replicas>
+      <vCores>1</vCores>
+      <deploymentSettings>
+        <http>
+          <inbound>
+            <publicUrl>https://myapp.anypoint.com</publicUrl>
+            <forwardSslSession>true</forwardSslSession>
+            <lastMileSecurity>true</lastMileSecurity>
+          </inbound>
+        </http>
+      </deploymentSettings>
+    </cloudhub2Deployment>
+    <executions>
+
+<execution>
+
+<id>deploy</id>
+
+<phase>deploy</phase>
+
+<goals>
+
+<goal>deploy</goal>
+
+</goals>
+
+</execution>
+
+</executions>
+  </configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -74,5 +112,14 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	
+	 <distributionManagement>
+	   <repository>
+            <id>Repository</id>
+            <name>Corporate Repository</name>
+            <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/a289f059-88d8-41f8-a287-613f5fbd53b7/maven</url>
+            <layout>default</layout>
+        </repository>
+	  </distributionManagement>
 
 </project>
